--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apso/cli",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Apso CLI",
   "author": "Nate Oaks @nateoaks",
   "bin": {
@@ -19,19 +19,27 @@
   "dependencies": {
     "@oclif/core": "^2",
     "@oclif/plugin-help": "^5",
-    "@oclif/plugin-plugins": "^2.3.0"
+    "@oclif/plugin-plugins": "^2.3.0",
+    "eta": "^2.0.0",
+    "pluralize": "^8.0.0",
+    "rc": "^1.2.8"
   },
   "devDependencies": {
     "@oclif/test": "^2.3.5",
     "@types/chai": "^4",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.18.12",
+    "@types/pluralize": "^0.0.29",
+    "@types/rc": "^1.2.1",
     "chai": "^4",
+    "copyfiles": "^2.4.1",
     "eslint": "^7.32.0",
     "eslint-config-oclif": "^4",
     "eslint-config-oclif-typescript": "^1.0.3",
+    "eslint-config-prettier": "^8.6.0",
     "mocha": "^9",
     "oclif": "^3",
+    "prettier": "^2.8.4",
     "shx": "^0.3.3",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
@@ -53,13 +61,16 @@
     }
   },
   "scripts": {
-    "build": "shx rm -rf dist && tsc -b",
+    "post-build": "copyfiles -u 1 src/**/*.eta dist/",
+    "build": "shx rm -rf dist && tsc -b && npm run post-build",
     "lint": "eslint . --ext .ts --config .eslintrc",
+    "format": "prettier \"src/**/*.ts\" --write",
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif readme && git add README.md"
+    "version": "oclif readme && git add README.md",
+    "prepare": "npm run format && npm run lint"
   },
   "engines": {
     "node": ">=12.0.0"
