--- a/package.json
+++ b/package.json
@@ -65,12 +65,12 @@
     "build": "shx rm -rf dist && tsc -b && npm run post-build",
     "lint": "eslint . --ext .ts --config .eslintrc",
     "format": "prettier \"src/**/*.ts\" --write",
+    "pre-build": "npm run format && npm run lint",
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "yarn lint",
     "prepack": "yarn build && oclif manifest && oclif readme",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
-    "version": "oclif readme && git add README.md",
-    "prepare": "npm run format && npm run lint"
+    "version": "oclif readme && git add README.md"
   },
   "engines": {
     "node": ">=12.0.0"
