--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nateoaks/cli",
+  "name": "@apso/cli",
   "version": "0.0.1",
   "description": "Apso CLI",
   "author": "Nate Oaks @nateoaks",
