--- a/package.json
+++ b/package.json
@@ -67,8 +67,9 @@
     "format": "prettier \"src/**/*.ts\" --write",
     "pre-build": "npm run format && npm run lint",
     "postpack": "shx rm -f oclif.manifest.json",
-    "posttest": "yarn lint",
-    "prepack": "yarn build && oclif manifest && oclif readme",
+    "pack": "oclif pack tarballs",
+    "posttest": "npm run lint",
+    "prepack": "npm run build && oclif manifest && oclif readme",
     "test": "mocha --forbid-only \"test/**/*.test.ts\"",
     "version": "oclif readme && git add README.md"
   },
