--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "dependencies": {
     "@oclif/core": "^2",
     "@oclif/plugin-help": "^5",
-    "@oclif/plugin-plugins": "^2.4.6",
+    "@oclif/plugin-plugins": "^3",
     "eta": "^2.0.0",
     "pluralize": "^8.0.0",
     "rc": "^1.2.8"
@@ -33,23 +33,25 @@
   "devDependencies": {
     "@oclif/test": "^2.3.5",
     "@types/chai": "^4",
-    "@types/mocha": "^9.0.0",
-    "@types/node": "^16.18.26",
+    "@types/mocha": "^10",
+    "@types/node": "^20",
     "@types/pluralize": "^0.0.29",
     "@types/rc": "^1.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
     "chai": "^4",
     "copyfiles": "^2.4.1",
     "eslint": "^7.32.0",
     "eslint-config-oclif": "^4",
     "eslint-config-oclif-typescript": "^1.0.3",
     "eslint-config-prettier": "^8.6.0",
-    "mocha": "^9",
+    "eslint-plugin-unicorn": "^40.1.0",
+    "mocha": "^10",
     "oclif": "^3",
     "prettier": "^2.8.4",
     "shx": "^0.3.3",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
-    "typescript": "^4.9.5"
+    "typescript": "^5"
   },
   "oclif": {
     "bin": "apso",
