--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
     "posttest": "npm run lint",
     "prepack": "npm run build && oclif manifest && oclif readme",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
     "version": "oclif readme && git add README.md"
   },
   "engines": {
