--- a/.github/workflows/onPushToMain.yml
+++ b/.github/workflows/onPushToMain.yml
@@ -16,7 +16,8 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '18'  # Set to your Node.js version
-        registry-url: 'https://registry.npmjs.org'
+        registry-url: 'https://npm.pkg.github.com'
+        scope: '@mavric'
       
     - name: Install dependencies
       run: npm install
@@ -29,8 +30,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Publish to npm
-      run: npm publish
+    - run: npm ci
+    - run: npm publish
       env:
-        NODE_AUTH_TOKEN: ${{ github.token }}
+        NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
