--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@oclif/plugin-plugins": "^3",
     "eta": "^2.0.0",
     "pluralize": "^8.0.0",
-    "rc": "^1.2.8"
+    "rc": "^1.2.8",
+    "shelljs": "^0.8.5"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
@@ -38,6 +39,7 @@
     "@types/node": "^20",
     "@types/pluralize": "^0.0.29",
     "@types/rc": "^1.2.1",
+    "@types/shelljs": "^0.8.15",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "chai": "^4",
     "copyfiles": "^2.4.1",
