--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -2,7 +2,8 @@ name: Publish to npm
 
 on:
   push:
-    branches: [main] # Run when a tag starting with 'v' is pushed
+    tags:
+      - 'v*'  # Run when a tag starting with 'v' is pushed
 
 jobs:
   publish-npm:
@@ -25,4 +26,4 @@ jobs:
       - name: Publish to npm
         run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} 
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTOMATION_TOKEN }} 
