--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -18,7 +18,6 @@ jobs:
         with:
           node-version: '18'
           registry-url: 'https://registry.npmjs.org/'
-          scope: '@apso'
       
       - name: Install dependencies
         run: npm ci
@@ -26,14 +25,16 @@ jobs:
       - name: Build
         run: npm run build
       
-      - name: Verify npm configuration
+      - name: Setup NPM Authentication
         run: |
-          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > .npmrc
-          npm whoami
+          echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > ~/.npmrc
+          cat ~/.npmrc
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
       
       - name: Publish to npm
-        run: npm publish --access public
+        run: |
+          npm config set access public
+          npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }} 
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }} 
