--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
+    "typedoc": "^0.28.3",
     "typescript": "^5"
   },
   "oclif": {
@@ -86,6 +87,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
+    "docs:generate": "typedoc src/lib/index.ts --out docs",
     "version": "oclif readme && git add README.md"
   },
   "engines": {
