GitHub integration for apso CLI completed

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@oclif/test": "^2.4.7",
     "@types/chai": "^4",
     "@types/inquirer": "^8.2.10",
+    "@types/js-yaml": "^4.0.9",
     "@types/mocha": "^10",
     "@types/node": "^20",
     "@types/node-fetch": "^2.6.9",
@@ -66,6 +67,7 @@
     "oclif": "^3",
     "prettier": "^2.8.4",
     "shx": "^0.3.3",
+    "sinon": "^21.0.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.5.0",
