--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "@oclif/core": "^2",
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^3",
+    "archiver": "^6.0.1",
+    "axios": "^1.6.0",
     "debug": "^4.3.4",
     "eta": "^2.0.0",
+    "form-data": "^4.0.0",
+    "open": "^10.0.0",
     "pluralize": "^8.0.0",
     "rc": "^1.2.8",
     "shelljs": "^0.8.5"
@@ -41,6 +45,7 @@
     "@types/pluralize": "^0.0.29",
     "@types/rc": "^1.2.1",
     "@types/shelljs": "^0.8.15",
+    "@types/archiver": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "chai": "^4",
     "copyfiles": "^2.4.1",
