--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "archiver": "^6.0.1",
     "axios": "^1.6.0",
     "debug": "^4.3.4",
+    "dotenv": "^17.2.3",
     "eta": "^2.0.0",
     "form-data": "^4.0.0",
     "open": "^10.0.0",
@@ -39,13 +40,13 @@
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@oclif/test": "^2.4.7",
+    "@types/archiver": "^6.0.2",
     "@types/chai": "^4",
     "@types/mocha": "^10",
     "@types/node": "^20",
     "@types/pluralize": "^0.0.29",
     "@types/rc": "^1.2.1",
     "@types/shelljs": "^0.8.15",
-    "@types/archiver": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "chai": "^4",
     "copyfiles": "^2.4.1",
