push and pull fixed

--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@oclif/core": "^2",
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^3",
+    "adm-zip": "^0.5.10",
     "debug": "^4.3.4",
+    "form-data": "^4.0.0",
     "eta": "^2.0.0",
     "pluralize": "^8.0.0",
     "rc": "^1.2.8",
@@ -37,6 +39,8 @@
     "@oclif/test": "^2.4.7",
     "@types/chai": "^4",
     "@types/mocha": "^10",
+    "@types/adm-zip": "^0.5.0",
+    "@types/form-data": "^2.5.0",
     "@types/node": "^20",
     "@types/pluralize": "^0.0.29",
     "@types/rc": "^1.2.1",
