--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@oclif/core": "^2",
     "@oclif/plugin-help": "^5",
     "@oclif/plugin-plugins": "^3",
+    "@types/blessed": "^0.1.27",
     "adm-zip": "^0.5.10",
+    "blessed": "^0.1.81",
     "debug": "^4.3.4",
-    "form-data": "^4.0.0",
     "eta": "^2.0.0",
+    "form-data": "^4.0.0",
     "pluralize": "^8.0.0",
     "rc": "^1.2.8",
     "shelljs": "^0.8.5"
@@ -37,10 +39,10 @@
   "devDependencies": {
     "@jest/globals": "^29.5.0",
     "@oclif/test": "^2.4.7",
-    "@types/chai": "^4",
-    "@types/mocha": "^10",
     "@types/adm-zip": "^0.5.0",
+    "@types/chai": "^4",
     "@types/form-data": "^2.5.0",
+    "@types/mocha": "^10",
     "@types/node": "^20",
     "@types/pluralize": "^0.0.29",
     "@types/rc": "^1.2.1",
