--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@oclif/plugin-plugins": "^3",
     "adm-zip": "^0.5.10",
     "debug": "^4.3.4",
+    "dotenv": "^17.2.3",
     "eta": "^2.0.0",
     "form-data": "^4.0.0",
     "inquirer": "^8.2.7",
